force-app/main/default/objects/Konteyner_Numarasi__c/Konteyner_Numarasi__c.object-meta.xml
<CustomObject>
    <label>Konteyner Numarasi</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Konteyner Numarasi Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Konteynar Numaralari</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>