force-app/main/default/objects/Konteyner_Numarasi__c/fields/Deniz_Yolu_Varis__c.field-meta.xml
<CustomField>
    <fullName>Deniz_Yolu_Varis__c</fullName>
    <label>Deniz Yolu Varis</label>
    <length>11</length>
    <type>Text</type>
</CustomField>