force-app/main/default/objects/Konteyner_Numarasi__c/fields/Havayolu_Varis__c.field-meta.xml
<CustomField>
    <fullName>Havayolu_Varis__c</fullName>
    <label>Havayolu Varis</label>
    <length>20</length>
    <type>Text</type>
</CustomField>