force-app/main/default/objects/Konteyner_Numarasi__c/fields/Konteynar_Varis_Tarihi__c.field-meta.xml
<CustomField>
    <fullName>Konteynar_Varis_Tarihi__c</fullName>
    <label>Konteynar Varis Tarihi</label>
    <type>Date</type>
</CustomField>