force-app/main/default/objects/Konteyner_Numarasi__c/fields/Liman_Adi__c.field-meta.xml
<CustomField>
    <fullName>Liman_Adi__c</fullName>
    <label>Liman Adi</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>