force-app/main/default/objects/Konteyner_Numarasi__c/fields/minumum_deger__c.field-meta.xml
<CustomField>
    <fullName>minumum_deger__c</fullName>
    <formula>TEXT( MIN(20,35,100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>minumum deger</label>
    <type>Text</type>
</CustomField>