force-app/main/default/objects/Konteyner_Numarasi__c/fields/ortalama__c.field-meta.xml
<CustomField>
    <fullName>ortalama__c</fullName>
    <formula>MFLOOR((10+40+50)/3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ortalama</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>