force-app/main/default/objects/Konteyner_Numarasi__c/fields/Plaka__c.field-meta.xml
<CustomField>
    <fullName>Plaka__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plaka</label>
    <referenceTo>Plaka__c</referenceTo>
    <relationshipLabel>Konteynar Numaralari</relationshipLabel>
    <relationshipName>Konteynar_Numaralari</relationshipName>
    <type>Lookup</type>
</CustomField>