force-app/main/default/objects/Konteyner_Numarasi__c/fields/Sigorta__c.field-meta.xml
<CustomField>
    <fullName>Sigorta__c</fullName>
    <label>Sigorta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evet</fullName>
            </value>
            <value>
                <fullName>Hayir</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>